# clap-hot-reload

./: Cargo.toml  README.md
examples/polysynth/: Cargo.toml
examples/polysynth/src/: lib.rs  oscillator.rs  params.rs  poly_oscillator.rs
src/: entry.rs  lib.rs  util.rs  watcher.rs  wrapper.rs  wrapper_host.rs  wrapper_plugin.rs
src/watcher/: event_thread.rs  fanout.rs  inner.rs  symlinks.rs
src/wrapper/: audio_processor.rs  channel.rs  extensions.rs  requests.rs
src/wrapper/audio_processor/: cross_fader.rs  note_tracker.rs  output_buffers.rs
src/wrapper/extensions/: audio_ports.rs  gui.rs  latency.rs  note_ports.rs  params.rs  state.rs  timer.rs
