[package]
name = "clack-hot-reload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clack-plugin = { workspace = true }
clack-host = { workspace = true, features = ["clack-plugin"] }
clack-extensions = { workspace = true, features = ["audio-ports", "note-ports", "params", "state", "clack-host", "clack-plugin"] }

crossbeam-channel = "0.5.9"
notify-debouncer-full = "0.3.1"
libloading = "0.8.1"
tempfile = "3.10.1"
blake3 = "1.5.0"

[workspace]
resolver = "2"
members = [
    "examples/polysynth"
]

[workspace.dependencies]
clack-plugin = { path = "../rust-clap/plugin", version = "0.1.0" }
clack-host = { path = "../rust-clap/host", version = "0.1.0" }
clack-extensions = { path = "../rust-clap/extensions", version = "0.1.0" }